# adoc-to-llmstxt

./: Cargo.toml  README.md
examples/: only_nav.rs  standard_version.rs
examples/cairo/v1.0.0/: llmstxt.toml
examples/cairo/v1.0.0/pages/: access.adoc  accounts.adoc  backwards-compatibility.adoc  components.adoc  erc1155.adoc  erc20.adoc  erc721.adoc  finance.adoc  index.adoc  interfaces.adoc  introspection.adoc  presets.adoc  security.adoc  udc.adoc  upgrades.adoc  wizard.adoc
examples/cairo/v1.0.0/pages/api/: access.adoc  account.adoc  erc1155.adoc  erc20.adoc  erc721.adoc  finance.adoc  governance.adoc  introspection.adoc  merkle-tree.adoc  security.adoc  testing.adoc  token_common.adoc  udc.adoc  upgrades.adoc  utilities.adoc
examples/cairo/v1.0.0/pages/governance/: governor.adoc  multisig.adoc  timelock.adoc  votes.adoc
examples/cairo/v1.0.0/pages/guides/: deployment.adoc  erc20-permit.adoc  erc20-supply.adoc  snip12.adoc  src5-migration.adoc
examples/directories/0.20.0/: llmstxt.toml
examples/directories/0.20.0/pages/: access.adoc
llmstxts/: cairo-v0.20.0.txt  cairo-v1.0.0.txt
llmstxts/full/: cairo-v1.0.0-full.txt
src/: config.rs  errors.rs  generate.rs  lib.rs  link.rs
src/generate/: common.rs  full.rs  standard.rs
