[package]
name = "adoc-to-llmstxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "adoc_to_llmstxt"
path = "src/lib.rs"

[[bin]]
name = "adoc-to-llmstxt"
doc = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
indoc = "2.0.5"
tokio = { version = "1.43.0", features = ["full"] }
