[package]
name = "adoc-to-llmstxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "adoc_to_llmstxt"
path = "src/lib.rs"

[[bin]]
name = "adoc-to-llmstxt"
doc = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
config = "0.15.7"
indoc = "2.0.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
