[package]
name = "oz-llmstxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "oz_llmstxt"
path = "src/lib.rs"

[[bin]]
name = "oz-llmstxt"
doc = false

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
clap = { version = "4.5.28", features = ["derive"] }
config = "0.15.7"
indoc = "2.0.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
